--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "8.0.1",
     "@types/react": "*",
     "@types/react-dom": "*",
     "babel-core": "^7.0.0-bridge.0",
@@ -43,6 +44,7 @@
     "babel-preset-minify": "0.5.0",
     "browser-env": "3.2.5",
     "chalk": "2.4.1",
+    "fsevents": "1.2.9",
     "inquirer": "6.2.0",
     "jest": "^23.6.0",
     "lerna": "^3.13.2",
@@ -52,7 +54,6 @@
     "mini-css-extract-plugin": "0.5.0",
     "ora": "3.0.0",
     "raf": "3.4.1",
-    "react-testing-library": "6.0.0",
     "read-pkg-up": "4.0.0",
     "replace-string": "2.0.0",
     "rollup": "1.1.2",
