--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -1,6 +1,9 @@
 {
   "main": "lib/index.js",
-  "license": "MIT",
+  "jsnext:main": "lib/index.esm.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
+  "source": "src/index.ts",
   "description": "Debounce hook for react",
   "name": "@rooks/use-debounce",
   "homepage": "https://react-hooks.org/hook/use-debounce",
@@ -10,26 +13,29 @@
   },
   "scripts": {
     "test": "jest",
-    "lint": "eslint src test",
     "build": "rollup -c ../../scripts/rollup.config.js",
-    "test:example": "parcel test/index.html",
-    "prepublish": "yarn run build"
+    "prepublish": "yarn run build",
+    "pregenerate:types": "rimraf index.d.ts",
+    "generate:types": "tsc"
   },
   "keywords": [
     "use",
+    "debounce",
     "react",
     "hooks",
     "rooks",
     "react-hooks.org"
   ],
+  "version": "3.0.1",
+  "_id": "@rooks/use-debounce@",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "version": "0.0.0",
-  "_id": "@rooks/use-debounce@",
-  "readme": "ERROR: No README data found!",
-  "publishConfig": {
-    "access": "public"
+  "dependencies": {
+    "lodash.debounce": "4.0.8"
   }
 }
