--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -29,7 +29,7 @@
     "react-hooks.org",
     "counter hook"
   ],
-  "version": "3.0.1",
+  "version": "3.0.3-alpha.0",
   "publishConfig": {
     "access": "public"
   },
