--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.0.1",
+  "version": "3.0.3-alpha.0",
   "_id": "@rooks/use-debounce@",
   "publishConfig": {
     "access": "public"
