--- a/packages/interval/package.json
+++ b/packages/interval/package.json
@@ -29,7 +29,7 @@
     "setInterval",
     "interval"
   ],
-  "version": "3.0.1",
+  "version": "3.0.3-alpha.0",
   "_id": "@rooks/use-interval@",
   "publishConfig": {
     "access": "public"
