--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "babel-preset-minify": "0.5.0",
     "browser-env": "3.2.5",
     "chalk": "2.4.1",
-    "fsevents": "1.2.9",
     "inquirer": "6.2.0",
     "jest": "^23.6.0",
     "lerna": "^3.13.2",
@@ -73,6 +72,9 @@
     "webpack": "4.29.1",
     "webpack-cli": "3.2.1",
     "write-pkg": "3.2.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "1.2.9"
   },
   "dependencies": {
     "jest-localstorage-mock": "2.4.0"
