--- a/packages/previous/package.json
+++ b/packages/previous/package.json
@@ -27,7 +27,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.0.3-alpha.1",
+  "version": "3.1.0",
   "_id": "@rooks/use-previous@",
   "publishConfig": {
     "access": "public"
