--- a/packages/sessionstorage/package.json
+++ b/packages/sessionstorage/package.json
@@ -28,7 +28,7 @@
     "hooks",
     "session storage"
   ],
-  "version": "3.1.0",
+  "version": "3.1.1-alpha.0",
   "_id": "@rooks/use-sessionstorage@",
   "publishConfig": {
     "access": "public"
