--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -26,7 +26,7 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "version": "3.1.1-alpha.1",
+  "version": "3.2.0",
   "_id": "@rooks/use-keys@",
   "publishConfig": {
     "access": "public"
