--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "list"
   ],
-  "version": "3.1.1-alpha.1",
+  "version": "3.2.0",
   "_id": "@rooks/use-select@",
   "publishConfig": {
     "access": "public"
