--- a/packages/timeout/package.json
+++ b/packages/timeout/package.json
@@ -29,7 +29,7 @@
     "timeout",
     "timeout hook"
   ],
-  "version": "3.1.1-alpha.1",
+  "version": "3.2.0",
   "_id": "@rooks/use-timeout@",
   "publishConfig": {
     "access": "public"
