--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "toggle hook"
   ],
-  "version": "3.1.1-alpha.1",
+  "version": "3.2.0",
   "_id": "@rooks/use-toggle@",
   "publishConfig": {
     "access": "public"
