--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -93,6 +93,24 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "simbathesailor",
+      "name": "anil kumar chaudhary",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/5938110?v=4",
+      "profile": "https://github.com/simbathesailor",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "harshzalavadiya",
+      "name": "Harsh Zalavadiya",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/5774849?v=4",
+      "profile": "https://foobars.in",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
