--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "ts": "rimraf packages/*/*.tsbuildinfo && rimraf packages/*/lib/*.d.ts && tsc -b @package-name-list.txt"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.5",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
     "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/plugin-proposal-export-default-from": "7.2.0",
-    "@babel/preset-env": "^7.1.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "7.5.2",
+    "@babel/preset-env": "7.5.5",
+    "@babel/preset-react": "7.0.0",
     "@testing-library/react": "8.0.1",
     "@types/react": "*",
     "@types/react-dom": "*",
