--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "storybook": "start-storybook -s ./public -p 9001 -c .storybook",
-    "build": "build-storybook -s ./public -c .storybook -o .out",
+    "build": "build-storybook --quiet -s ./public -c .storybook -o .out",
     "predeploy": "yarn build",
     "predeploy:staging": "yarn predeploy",
     "deploy:staging": "now --scope react-hooks --target staging",
