--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,6 @@ jobs:
       - name: yarn install and build
         run: |
           yarn
-          yarn build
+          yarn build:action
       - name: test
         run: yarn test
