--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,6 +1,9 @@
-name: Node CI
+name: Deploy Master
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -21,5 +24,8 @@ jobs:
           yarn test
       - name: test
         run: yarn test
-      - name: deploy to now.sh
-        run: yarn deploy
+      - name: deploy
+        uses: actions/zeit-now@master
+        env:
+          ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
+        args: deploy  --no-clipboard  packages/storybook --scope react-hooks > $HOME/$GITHUB_ACTION.txt
