--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -19,11 +19,10 @@ jobs:
         run: npm i -g yarn
       - name: Install now
         run: npm i -g now
-      - name: yarn install and build and test
+      - name: yarn install and build
         run: |
           yarn
           yarn build:action
-          yarn test
       - name: test
         run: yarn test
       - name: deploy
