--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Installs yarn
         run: npm i -g yarn
       - name: Install now
-        run: npm i -g now
+        run: now --version || npm i -g now
       - name: yarn install and build
         run: |
           yarn
