--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "npmClient": "yarn",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "useWorkspaces": true,
-  "version": "3.2.2"
+  "version": "3.2.3"
 }
