--- a/packages/previous/package.json
+++ b/packages/previous/package.json
@@ -31,5 +31,6 @@
   "_id": "@rooks/use-previous@",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
