--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -30,5 +30,6 @@
   "_id": "@rooks/use-keys@",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
