Remove react-dom from peer deps

--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -35,8 +35,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "dependencies": {
     "lodash.debounce": "4.0.8"
