--- a/template/package.json
+++ b/template/package.json
@@ -23,8 +23,7 @@
     "react-hooks.org"
   ],
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "version": "0.0.0",
   "_id": "@rooks/%packageName%@",
