--- a/packages/key/package.json
+++ b/packages/key/package.json
@@ -29,7 +29,7 @@
     "keyboard event",
     "key"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-key@",
   "publishConfig": {
     "access": "public"
