--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -29,7 +29,7 @@
     "window",
     "scroll"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "publishConfig": {
     "access": "public"
   },
