--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "3.2.3",
+  "version": "3.3.0-alpha.0",
   "private": true,
   "description": "Storybook for hooks",
   "main": "index.js",
