--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "toggle hook"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-toggle@",
   "publishConfig": {
     "access": "public"
