--- a/packages/visibility-sensor/package.json
+++ b/packages/visibility-sensor/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "visibility sensor hook"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-visibility-sensor@",
   "publishConfig": {
     "access": "public"
