--- a/packages/will-unmount/package.json
+++ b/packages/will-unmount/package.json
@@ -30,7 +30,7 @@
     "unmount",
     "unmount hook"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-will-unmount@",
   "publishConfig": {
     "access": "public"
