--- a/packages/geolocation/package.json
+++ b/packages/geolocation/package.json
@@ -25,7 +25,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "3.3.0-alpha.0",
+  "version": "3.3.0",
   "_id": "@rooks/use-geolocation@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
