--- a/packages/mutation-observer/package.json
+++ b/packages/mutation-observer/package.json
@@ -31,7 +31,7 @@
     "mutation observer",
     "mutation observer hook"
   ],
-  "version": "3.3.0-alpha.0",
+  "version": "3.3.0",
   "_id": "@rooks/use-mutation-observer@",
   "publishConfig": {
     "access": "public"
