--- a/packages/raf/package.json
+++ b/packages/raf/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "raf"
   ],
-  "version": "3.3.0-alpha.0",
+  "version": "3.3.0",
   "_id": "@rooks/use-raf@",
   "publishConfig": {
     "access": "public"
