Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks.org",
+  "name": "rooks",
   "private": true,
   "description": "Useful React hooks for everyone.",
   "scripts": {
