--- a/packages/did-update/package.json
+++ b/packages/did-update/package.json
@@ -6,7 +6,7 @@
   "source": "src/index.ts",
   "description": "componentDidUpdate hook for react",
   "name": "@rooks/use-did-update",
-  "homepage": "https://react-hooks.org/hook/use-did-update",
+  "homepage": "https://react-hooks.org/?path=/story/usedidupdate--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
