--- a/packages/fork-ref/package.json
+++ b/packages/fork-ref/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "A hook that can combine two refs(mutable or callbackRefs) into a single callbackRef",
   "name": "@rooks/use-fork-ref",
-  "homepage": "https://react-hooks.org/hook/use-fork-ref",
+  "homepage": "https://react-hooks.org/?path=/story/useforkref--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
