--- a/packages/geolocation/package.json
+++ b/packages/geolocation/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "A hook to provide the geolocation info on client side.",
   "name": "@rooks/use-geolocation",
-  "homepage": "https://react-hooks.org/hook/use-geolocation",
+  "homepage": "https://react-hooks.org/?path=/story/usegeolocation--basic-example-geolocation",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
