--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for input",
   "name": "@rooks/use-input",
-  "homepage": "https://react-hooks.org/hook/use-input",
+  "homepage": "https://react-hooks.org/?path=/story/useinput--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
