--- a/packages/online/package.json
+++ b/packages/online/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for online",
   "name": "@rooks/use-online",
-  "homepage": "https://react-hooks.org/hook/use-online",
+  "homepage": "https://react-hooks.org/?path=/story/useonline--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
