--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for select",
   "name": "@rooks/use-select",
-  "homepage": "https://react-hooks.org/hook/use-select",
+  "homepage": "https://react-hooks.org/?path=/story/useselect--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
