--- a/packages/timeout/package.json
+++ b/packages/timeout/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for timeout",
   "name": "@rooks/use-timeout",
-  "homepage": "https://react-hooks.org/hook/use-timeout",
+  "homepage": "https://react-hooks.org/?path=/story/usetimeout--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
