--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -5,7 +5,7 @@
   "types": "lib/index.d.ts",
   "description": "A React Hooks package for window-size",
   "name": "@rooks/use-window-size",
-  "homepage": "https://react-hooks.org/hook/use-window-size",
+  "homepage": "https://react-hooks.org/?path=/story/usewindowsize--basic-example",
   "repository": {
     "type": "git",
     "url": "https://github.com/imbhargav5/rooks.git"
