--- a/packages/key/package.json
+++ b/packages/key/package.json
@@ -29,7 +29,7 @@
     "keyboard event",
     "key"
   ],
-  "version": "3.4.1",
+  "version": "3.4.2-dev.0",
   "_id": "@rooks/use-key@",
   "publishConfig": {
     "access": "public"
