--- a/packages/localstorage/package.json
+++ b/packages/localstorage/package.json
@@ -28,7 +28,7 @@
     "rooks",
     "hooks"
   ],
-  "version": "3.4.1",
+  "version": "3.4.2-dev.0",
   "_id": "@rooks/use-localstorage@",
   "publishConfig": {
     "access": "public"
