--- a/packages/navigator-language/package.json
+++ b/packages/navigator-language/package.json
@@ -29,7 +29,7 @@
     "navigator language",
     "navigator language hook"
   ],
-  "version": "3.4.1",
+  "version": "3.4.2-dev.0",
   "_id": "@rooks/use-navigator-language@",
   "publishConfig": {
     "access": "public"
