--- a/packages/on-window-resize/package.json
+++ b/packages/on-window-resize/package.json
@@ -29,7 +29,7 @@
     "window",
     "resize"
   ],
-  "version": "3.4.0",
+  "version": "3.4.2-dev.0",
   "publishConfig": {
     "access": "public"
   },
