--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,10 +11,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js 10.x
-        uses: actions/setup-node@v1
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1.1.0
         with:
-          version: 10.x
+          version: 12.x
+      - run: git config --global user.email "me@imbhargav5.com"
+      - run: git config --global user.name "Bhargav Ponnapalli"
       - name: Installs yarn
         run: npm i -g yarn
       - name: Install now
@@ -25,6 +27,12 @@ jobs:
           yarn build:action
       - name: test
         run: yarn test
+      - name: Add npm token
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - name: Create prerelease version
+        run: yarn run ga-prerelease-version --preid ${GITHUB_SHA::8}
+      - name: Publish prerelease version
+        run: yarn run ga-prerelease-publish --dist-tag dev
       - name: deploy
         env:
           ZEIT_TOKEN: ${{secrets.ZEIT_TOKEN}}
