--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -29,7 +29,7 @@
     "react-hooks.org",
     "counter hook"
   ],
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "publishConfig": {
     "access": "public"
   },
