--- a/packages/on-window-scroll/package.json
+++ b/packages/on-window-scroll/package.json
@@ -29,7 +29,7 @@
     "window",
     "scroll"
   ],
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "publishConfig": {
     "access": "public"
   },
