--- a/packages/outside-click/package.json
+++ b/packages/outside-click/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "ref outside click"
   ],
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "_id": "@rooks/use-outside-click@",
   "publishConfig": {
     "access": "public"
