--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "list"
   ],
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "_id": "@rooks/use-select@",
   "publishConfig": {
     "access": "public"
