--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared",
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "description": "Shared package with all utils",
   "author": "Bhargav Ponnapalli <bhargavponnapalli.5@gmail.com> (https://github.com/imbhargav5)",
   "homepage": "https://github.com/imbhargav5/rooks#readme",
