--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "private": true,
   "description": "Storybook for hooks",
   "main": "index.js",
