--- a/packages/timeout/package.json
+++ b/packages/timeout/package.json
@@ -29,7 +29,7 @@
     "timeout",
     "timeout hook"
   ],
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "_id": "@rooks/use-timeout@",
   "publishConfig": {
     "access": "public"
