--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "toggle hook"
   ],
-  "version": "3.4.3",
+  "version": "3.4.4-6d7bf229.0",
   "_id": "@rooks/use-toggle@",
   "publishConfig": {
     "access": "public"
