--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "yarn run build:shared --stream --parallel && yarn run build:independent  --stream --parallel && yarn run build:rooks && yarn run build:demos  --stream --parallel",
     "generate:types": "lerna run generate:types --stream",
     "ga-prerelease-version": "lerna version prerelease --force-publish=* --no-commit-hooks --no-push --yes",
-    "prerelease-version-bump": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version prerelease --force-publish=* --no-commit-hooks --no-push --preid ${GITHUB_SHA}",
+    "prerelease-version-bump": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version prerelease --force-publish=* --preid ${GITHUB_SHA}",
+    "canary-version-bump": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version prerelease --force-publish=* --preid canary",
     "ga-prerelease-publish": "lerna publish from-git --force-publish=* --yes",
     "release-version-bump": "lerna version --force-publish=*",
     "ga-release-publish": "lerna publish from-git  --force-publish=* --yes",
