Fix version bump script

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -42,6 +42,6 @@ jobs:
         if: steps.is_master.outputs.result == 1
         run: |
           git add CHANGELOG.md
-          git -c user.name="imbhargav5 bot" -c user.email="imbhargav5-bot@users.noreply.github.com" \
+          git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Add ${{ steps.tags.outputs.new }} to CHANGELOG.md [skip ci]" --no-verify --quiet
-          git push "https://imbhargav5-bot:${{ secrets.BOT_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
+          git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" master
