--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -31,4 +31,4 @@ jobs:
     #   - name: Create prerelease version
     #     run: yarn run ga-prerelease-version --preid ${GITHUB_SHA::8}
       - name: Publish prerelease version
-        run: yarn run ga-prerelease-publish --dist-tag canary
+        run: yarn run ga-npm-publish --dist-tag canary
