Fix typo yet again

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.release.prerelease == true
+    if: github.event.release.prerelease == false
     steps:
       - uses: actions/checkout@master
       - name: Use Node.js 12.x
