--- a/packages/boundingclientrect/package.json
+++ b/packages/boundingclientrect/package.json
@@ -29,7 +29,7 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.5.0-canary.12",
+  "version": "3.5.0",
   "_id": "@rooks/use-boundingclientrect@",
   "publishConfig": {
     "access": "public"
