--- a/packages/countdown/package.json
+++ b/packages/countdown/package.json
@@ -31,7 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "version": "3.5.0-canary.12",
+  "version": "3.5.0",
   "_id": "@rooks/use-countdown@",
   "readme": "ERROR: No README data found!",
   "publishConfig": {
