--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-rooks",
-  "version": "3.5.0-canary.12",
+  "version": "3.5.0",
   "description": "Eslint config for rooks.",
   "keywords": [
     "eslint",
