--- a/packages/raf/package.json
+++ b/packages/raf/package.json
@@ -29,7 +29,7 @@
     "hooks",
     "raf"
   ],
-  "version": "3.5.0-canary.12",
+  "version": "3.5.0",
   "_id": "@rooks/use-raf@",
   "publishConfig": {
     "access": "public"
