--- a/packages/time-ago/package.json
+++ b/packages/time-ago/package.json
@@ -29,7 +29,7 @@
     "timeago.js",
     "timeago hook"
   ],
-  "version": "3.5.0-canary.12",
+  "version": "3.5.0",
   "_id": "@rooks/use-time-ago@",
   "publishConfig": {
     "access": "public"
