--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -8,7 +8,7 @@
     "build": "docusaurus-build",
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
-    "version": "docusaurus-version",
+    "docs-version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version",
     "deploy": "now --scope react-hooks --target production"
   },
